apps/authentik/ingressroute.yaml

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  annotations:
    gethomepage.dev/href: "https://authentik.trusted.nirmalhk7.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Security
    gethomepage.dev/icon: authentik
    gethomepage.dev/app: authentik # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Authentik
    gethomepage.dev/widget.type: "authentik"
    gethomepage.dev/widget.url: "https://authentik.trusted.nirmalhk7.com"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=authentik"
    gethomepage.dev/widget.key: L2cP2qFi88g2a6vMFrHBPiaGxJOrGUfHbFldFtRVXjxrDJyW3slG5gca1Sss
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`authentik.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
      middlewares:
        - name: mgd-security-https
        - name: mgd-security-headervalidation
  tls:
    secretName: authentik-tls
